--- a/index.html
+++ b/index.html
@@ -68,12 +68,10 @@ As Furry Fresh Grooming grew, so did their reputation for exceptional service. T
         
 
 <!-- A button to open the popup form -->
-    <div id="3">
+    <div id="pop">
     <a href="POP-up.html">
-      <img src="images/CLICK%20HERE%20TO%20JOIN.png" alt="popup" style="height: 250px; width:250px;">
-</a>
-        </div>
-        <div id="4">
+        <img src="images/CLICK%20HERE%20TO%20JOIN.png" alt="popup" style="height: 250px; width:250px;"></a>
+
     <p> Click the image to see our Paw-Print Rewards Program!</p>
     </div>
 
