--- a/gallery.html
+++ b/gallery.html
@@ -62,7 +62,7 @@
                             <p>This little guy is Fido. He recently came in for his first puppy grooming appointment.</p>
                         </div>
                         <div> <a href="gallery.html"><img src="images/happy-dog.png" alt="happy dog"></a>
-                            <p>Meet Lucky. This happy pup is always eager for his grooming appointment.</p>
+                            <p>Meet Lucky. This happy pup is always eager for his grooming and pampering appointment.</p>
                         </div>
                         <div><a href="gallery.html"><img src="images/pup-group.png" alt="groom pup"></a>
                             <p>This adorable litter of sibling pups all get groomed together as a family.</p>
